# RIFT_Renderer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  _clang-format  command_line_parser.cpp  command_line_parser.h  image.ppm  main.cpp
applications/RIFT_cli/: command_line_parser.cpp  command_line_parser.h  main.cpp
src/camera/: camera.cpp  camera.h  i_camera.h  icamera.h  thin_lens_camera.cpp  thin_lens_camera.h
src/core/acceleration_structures/: aabb.cpp  aabb.h  bvh_node.cpp  bvh_node.h  bvh_utils.h
src/core/bases/: hitable.h  icamera.h  ihitable.h  imaterial.h  itexture.h  material.h  texture.h
src/core/data_types/: aabb.cpp  aabb.h  hit_record.h  ray.h  scatter_record.h  scene.h  vec3.h
src/core/image_writers/: i_out_writer.h  iimage_writer.h  ioutput_writer.h  jpeg_writer.cpp  jpeg_writer.h  oiio_writer.cpp  oiio_writer.h  open_exr_writer.cpp  open_exr_writer.h  openexr_writer.cpp  openexr_writer.h  png_writer.cpp  png_writer.h
src/core/lighting_integrators/: direct_lighting.cpp  direct_lighting.h  i_light_integrator.h  ilight_integrator.h  light_sample_path.cpp  light_sample_path.h  light_sampling_pathtracer.cpp  light_sampling_pathtracer.h  path_tracer.cpp  path_tracer.h  pathtracer.cpp  pathtracer.h
src/core/onb/: onb.h
src/core/pdfs/: cosine_pdf.cpp  cosine_pdf.h  hitable_pdf.h  mixture_pdf.cpp  mixture_pdf.h  pdf.h
src/core/rendering/: color_functions.h  onb.h  render.cpp  render_controller.cpp  render_controller.h  render_unit.h  render_worker.cpp  render_worker.h  scatter_functions.h  utility_functions.h
src/core/samplers/: igenerator.h  sampler.h
src/core/samplers/rng/: drand48.cpp  drand48.h  i_rand_generator.h  xoroshiro128.cpp  xoroshiro128.h
src/core/samplers/samplers/: i_sampler.h
src/hitables/: box.cpp  box.h  bvh_node.cpp  bvh_node.h  constant_medium.cpp  constant_medium.h  hitable.h  hitable_list.h  i_hitable.h  ihitable.h  instancers.cpp  instancers.h  moving_sphere.cpp  moving_sphere.h  rect.cpp  rect.h  sky_sphere.h  sphere.cpp  sphere.h  xy_rect.cpp  xy_rect.h
src/materials/: dielectric.cpp  dielectric.h  diffuse_light.h  edf.h  i_material.h  imaterial.h  isotropic.cpp  isotropic.h  lambertian.cpp  lambertian.h  material.h  metal.cpp  metal.h
src/objects/camera/: i_camera.h  thin_lens_camera.cpp  thin_lens_camera.h
src/objects/hitables/: box.cpp  box.h  constant_medium.cpp  constant_medium.h  hitable_list.h  i_hitable.h  instancers.cpp  instancers.h  moving_sphere.cpp  moving_sphere.h  rect.cpp  rect.h  sky_sphere.h  sphere.cpp  sphere.h
src/rendering/: render.cpp  render.h  render_unit.h  sampler.h
src/textures/: checker_tex.cpp  checker_tex.h  constant_tex.h  i_texture.h  image_texture.cpp  image_texture.h  itexture.h  noise_texture.h  sky_gradient.cpp  sky_gradient.h  texture.h
src/utility/: bvh_utils.h  generators.cpp  generators.h  ray.h  scatter_functions.h  utilities.h  utility_functions.h  vec3.h
src/utility/buffers/: i_buffer.h  pixel_buffer.cpp
src/utility/containers/: render_settings.h  scene.h
src/utility/data_types/: aabb.cpp  aabb.h  hit_record.h  ray.h  scatter_record.h  vec3.h
src/utility/generators/: scene_generator.cpp  scene_generator.h
src/utility/math_functions/: maths.h  onb.h  scalars.h
src/utility/math_functions/pdfs/: cosine_pdf.cpp  cosine_pdf.h  hitable_pdf.h  mixture_pdf.h  pdf.h
src/utility/noises/: perlin.h
src/utility/parsers/: command_line_parser.cpp  command_line_parser.h
src/utility/rng/: drand48.cpp  drand48.h  generator.h  igenerator.h  xoroshiro128.cpp  xoroshiro128.h
src/utility/version/: version.h.in
utility_apps/number_generator/: main.cpp
